增加对Kafka监控的的叙述